test/netlist/error/conflicting-connection.bop
A(a, b) = c
where
  c = id(a);
  c = not(b);
end where;
